# blockchainvoting

./: .gitignore  CMakeLists.txt  Makefile  README.md  votingGUI_en_US.ts
data/: users.txt
include/: UserManager.h  VotingCounter.h  blockchain.h  hashing.h  voting.h
include/logic/: UserManager.h  VotingCounter.h  blockchain.h  hashing.h  utilities.h
include/qt/: blockchainwindow.h  loginwindow.h  mainwindow.h  registerwindow.h  resultswindow.h  votingscreen.h
src/: UserManager.cpp  VotingCounter.cpp  blockchain.c  blockchain.cpp  hashing.c  hashing.cpp  main.c  main.cpp  utiliites.cpp  voting.c
src/logic/: UserManager.cpp  VotingCounter.cpp  blockchain.cpp  hashing.cpp  utilities.cpp
src/qt/: blockchainwindow.cpp  blockchainwindow.ui  loadingdialog.cpp  loadingdialog.ui  loginwindow.cpp  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.ui  registerwindow.cpp  registerwindow.ui  resultswindow.cpp  resultswindow.ui  votingscreen.cpp  votingscreen.ui
website/: index.html  styles.css
